--- a/conf/application.conf
+++ b/conf/application.conf
@@ -30,11 +30,10 @@ play.i18n.langs = [ "en" ]
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-# db.default.driver=org.h2.Driver
-# db.default.url="jdbc:h2:mem:play"
-# db.default.user=sa
-# db.default.password=""
-
+db.default.driver=com.mysql.jdbc.Driver
+db.default.url="jdbc:mysql://172.20.174.137:3306/hackday"
+db.default.username="root"
+db.default.password="hak723jRkzEt9c4FQYmu3ZXLKY"
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
@@ -42,3 +41,5 @@ play.i18n.langs = [ "en" ]
 
 # You can disable evolutions for a specific datasource if necessary
 # play.evolutions.db.default.enabled=false
+
+ebean.default = ["models.*"]
