--- a/conf/application.conf
+++ b/conf/application.conf
@@ -31,9 +31,9 @@ play.i18n.langs = [ "en" ]
 # By convention, the default datasource is named `default`
 #
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://172.20.174.137:3306/hackday"
+db.default.url="jdbc:mysql://localhost:3306/hackday"
 db.default.username="root"
-db.default.password="hak723jRkzEt9c4FQYmu3ZXLKY"
+db.default.password="root"
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
