--- a/conf/application.conf
+++ b/conf/application.conf
@@ -33,7 +33,7 @@ play.i18n.langs = [ "en" ]
 db.default.driver=com.mysql.jdbc.Driver
 db.default.url="jdbc:mysql://localhost:3306/hackday"
 db.default.username="root"
-db.default.password="root"
+db.default.password=""
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
