--- a/conf/application.conf
+++ b/conf/application.conf
@@ -34,7 +34,7 @@ db.default.driver=com.mysql.jdbc.Driver
 db.default.url="jdbc:mysql://localhost:3306/hackday"
 db.default.username="root"
 db.default.password="root"
-db.default.logStatements=true
+
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
@@ -42,5 +42,9 @@ db.default.logStatements=true
 
 # You can disable evolutions for a specific datasource if necessary
 # play.evolutions.db.default.enabled=false
+
+logger.com.jolbox=DEBUG
+
+db.default.logStatements=true
 
 ebean.default = ["models.*"]
